*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.24 ===
* Added text estimation suppot for tk::Button widget. 
* Added aggregate size computation (enabled by default) for tk::TabControl widget.
* Fixed bug in bookmak editor (set first/last actions) of the tk::FileDialog widget.
* Updated build scripts.

=== 1.0.23 ===
* Added header support by tk::LedMeterChannel.
* Added header support by tk::LedMeter.
* Implemented SLOT_MOUSE_POINTER slot for overriding mouse pointer.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.22 ===
* Updated module versions in dependencies.

=== 1.0.21 ===
* Added empty text property for edit.
* Added text size estimation feature to the tk::Label widget.
* Fixed illegal memory access when destroying Box, Grid and Menu widgets.
* Added tab.pointer property to the tk::TabControl.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.20 ===
* Added possibility to control the value set to RangeFloat and Float properties.
* Fixed illegal memory access when destroying Box, Grid and Menu widgets.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.19 ===
* Optimized work with atoms.
* Many code updates that could cause potential problems related to using another
  decimal point for floating-point number formatting.
* FileDialog now synchronizes the state of selected_filter property.
* Implemented widget overrides by priority on the graph widget.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.18 ===
* Updated module versions in dependencies.

=== 1.0.17 ===
* Updated module versions in dependencies.

=== 1.0.16 ===
* Added 'zero' property to tk::GraphAxis to associate the position of origin on
  the axis with some value.
* Updated module versions in dependencies.

=== 1.0.15 ===